Bug 68251 - [IVB Apple MacBook pro] dmesg of machine boot up with "call trace" and *ERROR* mismatch in pch_pfit.pos (expected 0, found 80)
Summary: [IVB Apple MacBook pro] dmesg of machine boot up with "call trace" and *ERROR...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-19 01:39 UTC by shui yangwei
Modified: 2017-10-06 14:43 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg: boot up with call trace and error on IVB (Apple Macbook Pro) (114.92 KB, text/plain)
2013-08-19 01:39 UTC, shui yangwei
no flags Details
Information of intel_reg_dumper (14.82 KB, text/plain)
2013-08-19 07:59 UTC, shui yangwei
no flags Details
Track pfit enabling separately. (6.31 KB, patch)
2013-08-26 15:00 UTC, Chris Wilson
no flags Details | Splinter Review
Track pfit enabling separately. (6.34 KB, patch)
2013-08-26 22:42 UTC, Chris Wilson
no flags Details | Splinter Review

Description shui yangwei 2013-08-19 01:39:18 UTC
Created attachment 84218 [details]
dmesg: boot up with call trace and error on IVB (Apple Macbook Pro)

Environment:
--------------------------
Kernel: (drm-intel-next-queued)815ca9817afc1c1a45799fb9d4a4f413b7b1517c
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Aug 14 14:14:04 2013 +0200

    drm/i915: inline vma_create into lookup_or_create_vma

Description:
--------------------------
Test with latest -next-queued kernel, there's "call trace" and error messages in dmesg after machine booting up. I have tried other IVB platforms, there's no such issue. I can't find a good commit by checking some older kernels. 

Reproduce step:
--------------------------
1. change kernel and reboot
2. check the dmesg
Comment 1 Daniel Vetter 2013-08-19 06:04:24 UTC
Can you pls attach the output of intel_reg_dumper right after boot-up?
Comment 2 shui yangwei 2013-08-19 07:59:40 UTC
Created attachment 84233 [details]
Information of intel_reg_dumper

(In reply to comment #1)
> Can you pls attach the output of intel_reg_dumper right after boot-up?

OK, I appended the output of intel_reg_dumper here.
Comment 3 Chris Wilson 2013-08-26 15:00:07 UTC
Created attachment 84653 [details] [review]
Track pfit enabling separately.

I think this is just a spurious warning, and should either be correctly ignored or sanitized by the attached.
Comment 4 Chris Wilson 2013-08-26 22:42:47 UTC
Created attachment 84673 [details] [review]
Track pfit enabling separately.
Comment 5 Chris Wilson 2013-08-26 22:43:36 UTC
Daniel, we don't clear the pfit ctrl currently if the BIOS sets ctl.enabled but size=0 - this leads to a blank panel...
Comment 6 Daniel Vetter 2013-08-27 07:39:21 UTC
(In reply to comment #5)
> Daniel, we don't clear the pfit ctrl currently if the BIOS sets ctl.enabled
> but size=0 - this leads to a blank panel...

Yeah, makes sense. And for gmch pfit we should be solid already since we track the state of the CTL reg with the enable bit.
Comment 7 Daniel Vetter 2013-09-03 19:15:01 UTC
Please test Chris' patch.
Comment 8 shui yangwei 2013-09-04 01:41:56 UTC
(In reply to comment #7)
> Please test Chris' patch.

This patch worked. Test it on top -next-queued, the error message and "Call Trace" disappeared.
Comment 9 Daniel Vetter 2013-09-09 08:31:12 UTC
Patch merged into -fixes:

commit fd4daa9cea025ddf8623db289e79d264e9fa66f6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Aug 27 17:04:17 2013 +0100

    drm/i915: Track pfit enable state separately from size
Comment 10 Elizabeth 2017-10-06 14:43:55 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.